# rust-in-action

./: README.md
ch01/src/: main.rs
ch02/: Cargo.toml
ch02/src/: main.rs
ch03/codes/: cpu01.rs  cpu02.rs  cpu03.rs  lib.rs  main.rs
ch05/src/: main.rs
ch06/: Cargo.toml
ch06/codes/: allocate.rs  sample.rs
ch06/src/: main.rs
ch07/: Cargo.toml
ch07/codes/: fview.rs  path.rs  serdes.rs  write123.rs
ch07/src/: akv_disk.rs  akv_mem.rs  main.rs
ch07/write123/src/: main.rs
ch08/: Cargo.toml
ch08/codes/: error.rs  mac.rs  reqwest.rs  resolver.rs
ch08/src/: main.rs
ch09/: Cargo.toml
ch09/src/: main.rs
ch10/: Cargo.toml
ch10/codes/: render-hex-rayon.rs  render-hex.rs  spin.rs
ch10/src/: main.rs
ch11/: Cargo.toml
ch11/src/: main.rs
ch12/: Cargo.toml
ch12/codes/: fn_ptr.rs  handle_signal.rs  ignore.rs  rand_hlt.rs  sixty.rs
ch12/src/: main.rs
